--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HEXAD-12 Survey</title>
+    <title>Survey Questionnaires</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4 text-center">HEXAD-12 Survey</h1>
-        <div id="questions-container" class="mb-4"></div>
-        <div class="text-center">
-            <button id="submit-btn" class="btn btn-primary">Submit</button>
-        </div>
-        <div id="alert-container" class="mt-4"></div>
-        <div id="user-types-explanation" class="mt-4"></div>
-        <pre id="result" class="mt-4 p-3 bg-light border rounded"></pre>
+        <h1 class="mb-4 text-center">Evaluation Surveys</h1>
+        <div class="mb-4"><a href="hexad12/index.html">HEXAD-12 Survey</a></div>
+        <div class="mb-4"><a href="minipxi/index.html">Mini PXI Survey</a></div>
     </div>
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
