--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="mb-4 text-center">Evaluation Surveys</h1>
         <div class="mb-4"><a href="hexad12/index.html">HEXAD-12 Survey</a></div>
         <div class="mb-4"><a href="minipxi/index.html">Mini PXI Survey</a></div>
-        <div class="mb-4"><a href="ai-sentiment/index.html">AI Sentiment Survey</a></div>
+        <div class="mb-4"><a href="AI-sentiment/index.html">AI Sentiment Survey</a></div>
     </div>
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
